adding middleware to authenticate users
