# controllers/authentication.go
@@ -2,7 +2,9 @@ package controllers
 
 import (
 	"crud_operation/configs"
+	"crud_operation/dto"
 	"crud_operation/libraries"
+	"encoding/json"
 	"net/http"
 	"time"
 
@@ -34,6 +36,18 @@ type Claims struct {
 	jwt.StandardClaims
 }
 
+// Create token
+// @Summary Create token
+// @Description Create token
+// @Tags Authentication
+// @Produce json
+// @Accept application/x-www-form-urlencoded
+// @Param username formData string true "Username"
+// @Param password formData string true "Password"
+// @Success 200 {object} responses.TokenResponse
+// @Failure 401 {object} responses.ErrorResponse "Invalid credentials"
+// @Failure 500 {object} responses.ErrorResponse "Failed to create token"
+// @Router /oauth/token [post]
 func (ctrl *authenticationController) Token(c *fiber.Ctx) error {
 	username := c.FormValue("username")
 	password := c.FormValue("password")
@@ -78,10 +92,49 @@ func (ctrl *authenticationController) ValidateToken(c *fiber.Ctx) error {
 	return c.Next()
 }
 
+// Login
+// @Summary Login
+// @Description Login
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param user body dto.User true "User object"
+// @Success 200 {object} responses.UserResponse
+// @Failure 401 {object} responses.ErrorResponse "Unauthorized"
+// @Router /user/login [post]
 func (ctrl *authenticationController) Login(c *fiber.Ctx) error {
-	return c.JSON(fiber.Map{"message": "Login page"})
+	// fetch the username and password from the request body
+	var user dto.User
+	json.Unmarshal(c.Body(), &user)
+	status, err := ctrl.authLib.Login(user.Username, user.Password)
+	if !status {
+		return c.Status(http.StatusUnauthorized).JSON(fiber.Map{"error": "Invalid credentials"})
+	}
+	if err != nil {
+		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{"message": "Failed to authenticate user", "error": err.Error()})
+	}
+
+	return c.JSON(fiber.Map{"message": "Login successful."})
 }
 
+// ResetPassword
+// @Summary ResetPassword
+// @Description ResetPassword
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param user body dto.User true "User object"
+// @Success 200 {object} responses.UserResponse
+// @Failure 400 {object} responses.ErrorResponse "Failed to reset password"
+// @Router /user/reset [post]
 func (ctrl *authenticationController) ResetPassword(c *fiber.Ctx) error {
-	return c.JSON(fiber.Map{"message": "Reset password page"})
+	var user dto.User
+	json.Unmarshal(c.Body(), &user)
+	status, err := ctrl.authLib.ResetPassword(user.Username, user.Password)
+
+	if err != nil || !status {
+		return c.Status(http.StatusBadRequest).JSON(fiber.Map{"error": "Failed to reset password"})
+	}
+
+	return c.JSON(fiber.Map{"message": "Password reset successful."})
 }
