# routers/router.go
@@ -19,12 +19,17 @@ func SetupRoutes(app *fiber.App, storageInstance *mongo.Client) {
 	userLibrary := libraries.NewUserService(userRepo)
 	userController := controllers.NewUserHandler(userLibrary)
 
+	// add app to group v1
+	v1 := app.Group("/v1")
+	// Add v1 with middleware middlewares.JWTProtected()
+	v1.Use(middlewares.JWTProtected())
+
 	// Route handlers
-	app.Get("/users/:userid", userController.Get)
-	app.Get("/users", userController.GetAll)
-	app.Post("/users", userController.Add)
-	app.Put("/users/:userid", userController.Update)
-	app.Delete("/users/:userid", userController.Delete)
+	v1.Get("/users/:userid", userController.Get)
+	v1.Get("/users", userController.GetAll)
+	v1.Post("/users", userController.Add)
+	v1.Put("/users/:userid", userController.Update)
+	v1.Delete("/users/:userid", userController.Delete)
 
 }
 
@@ -36,14 +41,14 @@ func AuthRoutes(app *fiber.App) {
 	oauthController := controllers.NewAuthenticationHandler(userLibrary)
 
 	app.Post("/oauth/token", oauthController.Token)
-	app.Get("/protected", middlewares.JWTProtected(), func(c *fiber.Ctx) error {
-		username := c.Locals("username").(string)
-		return c.JSON(fiber.Map{"message": "Hello " + username})
-	})
-	app.Get("/oauth/callback", func(c *fiber.Ctx) error {
-		// Handle the OAuth callback here
-		return c.JSON(fiber.Map{"message": "OAuth callback received"})
-	})
+	// app.Get("/protected", middlewares.JWTProtected(), func(c *fiber.Ctx) error {
+	// 	username := c.Locals("username").(string)
+	// 	return c.JSON(fiber.Map{"message": "Hello " + username})
+	// })
+	// app.Get("/oauth/callback", func(c *fiber.Ctx) error {
+	// 	// Handle the OAuth callback here
+	// 	return c.JSON(fiber.Map{"message": "OAuth callback received"})
+	// })
 
 	app.Post("/user/login", oauthController.Login)
 	app.Post("/user/reset", oauthController.ResetPassword)
